Fixed spacing issue between title of lifelist item and post

--- a/trianglesandwiches.com/lifelist/lifelist.css
+++ b/trianglesandwiches.com/lifelist/lifelist.css
@@ -147,10 +147,8 @@ h4 {
 }
 
 .lifelistbox {
-
 	float: left;
 	margin: 0 0 14px 0;
-	padding: 21px 0 21px 0;
 	width: 770px;
 }
 
